welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:2: error: type mismatch;
 found   : (Int, Int)
 required: Boolean
 if(21->n){
      ^diff21:2: error: type mismatch;
 found   : Unit
 required: Int
 if(21->n){
 ^